--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Varela&display=swap');
 
 *{
-  font-family: 'Varela', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
